--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"iron-io/iron_mq": "1.4.6"
 	},
 	"require-dev": {
-    "way/generators": "~2.0"
+    "way/generators": "~2.0",
+    "barryvdh/laravel-debugbar": "1.*"
 	},
 	"autoload": {
 		"classmap": [
